--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,6 +41,7 @@ jobs:
       - name: build and push docker image
         if: success()
         uses :
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-            docker build -t mon-repo/voting-app:latest .
-            docker push mon-repo/voting-app:latest
+          echo "${{ secrets.DOCKER_PASSWORD }}" |
+            docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            docker build -t salahdevops/voting-app:latest .
+            docker push salahdevops/voting-app:latest
