--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,8 +40,10 @@ jobs:
 
       - name: build and push docker image
         if: success()
-        uses :
-          echo "${{ secrets.DOCKER_PASSWORD }}" |
-            docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASS: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             docker build -t salahdevops/voting-app:latest .
             docker push salahdevops/voting-app:latest
