--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,10 +33,11 @@ jobs:
           npm run lint
           npm test
 
-      - name: security scan (sonar)
-        uses: sonarsource/sonarcloud-github-action@master 
+      - name: Security Scan (Sonar)
+        uses: sonarsource/sonarqube-scan-action@v3 
         env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
 
       - name: build and push docker image
         if: success()
